# Infosys-Springboard-Internship-FinanceInsight

./: .env  .env.example  .gitignore  App.js  Auth.css  BERT_base.ipynb  Bert.ipynb  Bert_clean.ipynb  Bert_model.ipynb  CHANGELOG.md  CUSTOM_NER_MODEL.ipynb  Contract Entity Visualization.html  Contract_Entity_Visualization.html  DocLing.ipynb  Extraction.ipynb  FINAL_INTEGRATION_STATUS.md  Finance data.txt.txt  FinanceNERTool.css  FinanceNERTool.js  LICENSE  LabExercise01.docx  LangEX.py  LangExtract.ipynb  Lang_Extract_Docling.ipynb  Lang_Extract_Docling1.ipynb  Lang_Extraction.ipynb  Lang_Extraction.py  Langextract.ipynb  Login.js  NER model.ipynb  NER_PROJECT.ipynb  NER_annotation_initial_SpaCy_dataset_+_config.ipynb  NER_using_docling&LangExtract.ipynb  PDF_To_Text.py  PrivateRoute.js  QUICK_REFERENCE.md  README.md  Register.js  SETUP.md  SETUP_GUIDE.md  (+107 more)
BERT/: BERT.ipynb  BERT_notebook.ipynb  Bert.ipynb  Bert_notebook.ipynb  README.md  bert_base_.ipynb
BERT Task/: Bert Task.ipynb  Bert_Task.ipynb
Bert_model/: bert.py  bert_model.ipynb  bert_model_final.py  sentiment_analysis_for_sheets.csv  sentiment_analysis_full_report.html
Bert_model/financial_bert_model/: config.json
Blank_Spacy_Model_Training/: CUSTOM_NER_MODEL.ipynb  annotations .json
Docling Task/: Annual Report 2024-25.txt  docling_readme.md  good_docling.ipynb
FinalProject/: README.md  TASK_ASSIGNMENTS.md  index.html  tsconfig.app.json
FinalProject/backend/services/: __init__.py  document_converter.py  highlight_sentiment.py  langextract_service.py  ner_service.py
FinalProject/backend/tests/: test_api.py  test_converter.py  test_sentiment_api.py
FinalProject/docs/: README (2).md
FinalProject/docs/guides/: TROUBLESHOOTING.md
FinalProject/scripts/: start_backend.py
Final_Project/: README.md  start.bat  tailwind.config.ts
Infosys-Springboard-Internship-FinanceInsight/backend/: __init__.py
Infosys-Springboard-Internship-FinanceInsight/docs/: README_CONVERTER.md
Infosys-Springboard-Internship-FinanceInsight/finsight.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
LangExtract/: LangExtractInfosys.ipynb  README.md  extraction_results.jsonl  financial_data.jsonl  financial_data_visualization.html  langextract.ipynb  visualization.html
LangExtract with Docling/: doc_extraction.jsonl  doc_visualization.html  practice.ipynb  sample_financial_report.docx
LangExtractDocling/: LangExtractInfosysDocling.ipynb  README.md  financial_data.jsonl  financial_data_visualization.html
LangExtractNERUI/: README.md
LangExtractNERUI/backend/: app.py  requirements.txt
Langextract + Docling/: Langextract+Docling.ipynb  financial_data .jsonl  financial_data_visualization (6).html
Langextract(Docling)/: Langextract(Docling) (1).ipynb  financial_data (6).jsonl  financial_data_visualization (10).html
NER-Model/: .gitignore  LICENSE  LangExtract.py  Spacy.py  app.py  file.txt  index.html  model_config.json  model_metadata.json  package-lock.json  package.json  requirement.txt  sentiment_analysis_for_sheets.csv  sentiment_analysis_full_report.html
NER-Model/Bert_model/: bert.py  sentiment_analysis_for_sheets.csv  sentiment_analysis_full_report.html
NER-Model/data/: train.spacy  training_data.json
NER-Model/src/: App.tsx  index.css
NER-model/: annotations.json  prac.ipynb  train_data.txt  training_data.spacy
NER-model/model-best/: meta.json
NER_MODEL/: NER.ipynb  NER1 (2).ipynb  NER1.ipynb  NER2.ipynb  README.md  annotations.json  ner_training_text.txt  report.txt  sample.txt  training_data.json  training_data.spacy  training_finance.txt  validate.json  validation_data.json  validation_finance.txt
Task 1/: Contract_Agreement_Summary.txt  Issues_Faced.txt  README.md  contract_extraction.py  desktop.ini  extracted_text.txt  output.txt
Task 2-NER/: README.md  Status.txt  displacy_output.html  entities.jsonl  requirements.txt
Task 2_NER/: README.md  extract_entities.py
Task 3/: Contract_Entity_Visualization.html  Lang_Extract_Docling.ipynb  PDF_To_Text.py
Task1/: README.md.txt  Task1.ipynb  annotations (1).json  content.txt  extract_entites.py  text_extarctor.ipynb  text_extractor.ipynb.
Task2/: LangExtract_Docling.ipynb  financial_extractions.jsonl  financial_visualization.html
Task_1/: Internship_Task_1.ipynb  entities.jsonl
backend/: __init__.py  app.py  requirements.txt
backend/bert_model/: config.json
backend/model-best/: config.cfg  meta.json
backend/services/: __init__.py  document_converter.py  langextract_service.py  ner_service.py  sentiment_service.py
backend/tests/: test_api.py  test_sentiment_api.py  test_unicode_handling.py
docling task/: docling_readme.md
docs/: README (2).md  README_CONVERTER.md
docs/guides/: SETUP.md  SETUP_GUIDE.md
docs/specs/: FINAL_INTEGRATION_STATUS.md  INTEGRATION_SUMMARY.md  VISUAL_FLOW.md  WORKFLOW_GUIDE.md
finsight.egg-info/: PKG-INFO
frontend/: package-lock.json
frontend/config/: vite.config.ts
frontend/src/: index.css
main_project/: pdf_to_text.py
main_project/langextract/: visualization (2).html
main_project/temp_main/: task1.ipynb
output/: AI AI_FinanceInsight.html  AI AI_FinanceInsight.md  AI AI_FinanceInsight.txt  Alpha Technologies Pvt. Ltd (1).html  Alpha Technologies Pvt. Ltd (1).md  company_paragraphs_highlighted.html  company_paragraphs_sample.html  company_paragraphs_sample.txt  company_sentiment_sample.html  company_sentiment_sample.md  complex_document.html  complex_document.md  extraction_results.jsonl  extraction_visualization.html  ner_results.html  saample_pdfs.html  saample_pdfs.md  saample_pdfs.txt  sample-local-pdf.html  sample-local-pdf.md  sample-local-pdf.txt  sentiment_analysis_results.json
scripts/: start_backend.py
src/: App.tsx
src/components/: DocumentPreview.tsx  ExtractionsTable.tsx  InsightsPanel.tsx  LangExtractConfigDialog.tsx  Sidebar.tsx
src/pages/: Index.tsx
task 1/: sample.txt
task 2/: task_2_lang.ipynb  visualization_TASK2_.html
task2/: data.jsonl  lang_extraction.ipynb  visualization.html
task3/: data.jsonl  dockling.ipynb  visualization.html
(+48 files in other folders)
