[project]
name = "finsight"
version = "1.1.0"
description = "AI-powered platform for comprehensive financial document analysis"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "FinSight Team"}
]
keywords = ["finance", "nlp", "sentiment-analysis", "ner", "document-analysis"]

dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "python-multipart==0.0.20",
    "docling==2.15.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "langextract>=0.1.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
